<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/forgot_backarrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/backarrow"
                    android:padding="10dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:gravity="left">


                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                     />

            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/urbanist_bold"
                android:gravity="left"
                android:paddingLeft="30dp"
                android:paddingTop="40dp"
                android:text="@string/forgotpassword"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/urbanist_bold"
                android:gravity="left"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:text="@string/texts"
                android:textColor="?attr/textcolor"
                android:textSize="17dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittextstyle"
                    android:paddingLeft="8dp"
                    android:textColor="?attr/textcolor"
                    android:paddingTop="20dp"
                    android:textCursorDrawable="@null"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:paddingBottom="10dp"
                    android:hint="@string/Email"
                    android:textColorHint="#848587"
                    android:shadowRadius="2"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/buttoncontinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/buttonred"
                    android:fontFamily="@font/urbanist_bold"
                    android:gravity="center|center_horizontal"
                    android:text="@string/CONTINUE"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
