<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:padding="40dp"
                android:src="@drawable/slide2bg" />
            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:maxLines="1"
                android:text="@string/downloadandwatch"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"/>
            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:maxLines="1"
                android:text="@string/watchoffline"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="8"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="8"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            >


                                <TextView
                                    android:id="@+id/txtStatus"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="bottom"
                                    android:fontFamily="@font/urbanist_bold"
                                    android:text="@string/downlod"
                                    android:textColor="?attr/textcolor"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
        </LinearLayout>
                            <!--
                                                             <LinearLayout
                                                                 android:layout_gravity="left"
                                                                 android:gravity="left|center_vertical"
                                                                 android:layout_weight="1"
                                                                 android:orientation="vertical"
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content">

                                                             <ImageView
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:src="@drawable/circle"
                                                                 android:layout_gravity="left"
                                                                 tools:ignore="RtlHardcoded" />

                                                             </LinearLayout>-->
                        </LinearLayout>


                    </LinearLayout>


