<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/introscreen" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/Notroublesomecontracts"
                android:layout_weight="0.3"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:fontFamily="@font/urbanist_bold"
                android:text=""
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_gravity="bottom"
                    android:id="@+id/watchlater"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="3dp"
                        >

                        <LinearLayout
                            android:layout_weight="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="10dp"
                            >
                            <TextView
                                android:id="@+id/txtStatus"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Join"
                                android:gravity="center"
                                android:textSize="20dp"
                                android:fontFamily="@font/urbanist_bold"
                                android:textColor="?attr/textcolor"/>
                        </LinearLayout>

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="vertical"
                            >

                            <Button
                                android:id="@+id/let_start"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/buttonstyle"
                                android:fontFamily="@font/urbanist_bold"
                                android:gravity="center|center_horizontal"
                                android:padding="10dp"
                                android:text="@string/letsgetstart"
                                android:textAllCaps="false"
                                android:textColor="#FFFFFF"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</LinearLayout>
